
1.3.14   Extra safety check in shadow zone routines
         Code tidying

1.3.15   Extra safety check re. zero-length polygon shares
         Code tidying

1.3.16   Fix cliff notch elevation problem
         Improved logfile output
         Minor change to profile spacing
         Code tidying

1.3.17   Extra safety check in cliff collapse
         Fixed error in CMakeLists.txt
         Code tidying

1.3.18   Added Wilf's CSV per-timestep output
         Ongoing changes to permit multiple coastlines
         Code tidying

1.3.19   OpenMP support added by Wilf
         Ongoing changes to permit multiple coastlines
         Code tidying

1.3.20   Bug fix re. cliff notch and tides
         Ongoing changes to permit multiple coastlines
         Code tidying following accidental reformatting

1.3.21   Extra safety check added to CShore to prevent a zero divide error
         Modified test suite input files re. CSV option
         Ongoing changes to permit multiple coastlines
         Added code contribution guidelines
         Added Artistic Style code formatter configuration file
         Further code tidying using Artistic Style

1.3.22   Ongoing changes to permit multiple coastlines
         Changed to clang-format source code formatter
         Added clang-format configuration file
         Changed code contribution guidelines
         Moved some of Manuel's surge/flood code to a separate file
         Renamed 'flood fill' stuff to 'cell-by-cell fill' to avoid flood/surge confusion
         Improved safety check in line smoothing
         Code tidying

1.3.23   Ongoing changes to permit multiple coastlines
         Bug fix in line smoothing
         Code tidying

1.3.24   Ongoing changes to permit multiple coastlines
         Added clang-tidy configuration
         Const-correctness etc. enforced via clang-tidy
         Wilf's cliff toe tracing added
         Code tidying

1.3.25   Ongoing changes to permit multiple coastlines
         Code tidying
