@@ -5,7 +5,7 @@
 # CoastalME
 The [latest release](https://github.com/coastalme/coastalme/releases) is version 1.2.0 (18 Nov 2024).
 
-The testing version (use at your own risk!) is 1.3.25 (03 Jul 2025)
+The testing version (use at your own risk!) is 1.3.25 (07 Jul 2025)
 
 By <a href="https://www.bgs.ac.uk/people/payo-garcia-andres/">Andres Payo</a> and <a href="https://en.wikipedia.org/wiki/David_Favis-Mortlock">David Favis-Mortlock</a> and [others](COMMITERS.md).
 
