@@ -17,10 +17,11 @@
 ; Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 ;
 ;======================================================================================================================
-Input data file (path and name)                      : in/test_suite/minimal_cons_with_intervention_wave_angle_270/minimal_with_intervention.dat
+Input data file (path and name)                      : in/test_suite/minimal_cons_wave_angle_310/minimal.dat
 
 ;======================================================================================================================
-Path for output                                      : out/test_suite/minimal_cons_with_intervention_wave_angle_270/
+
+Path for output                                      : out/test_suite/minimal_cons_wave_angle_310/
 
 ;======================================================================================================================
 
